--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build --openssl-legacy-provider",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "format": "prettier --write \"src/**/*.{js,jsx}\""
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "pre-render": "react-snap --verbose && react-snap-sitemap --base-url=https://moviedownload.online/"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@arcadian-digital/react-snap-sitemap": "^2.0.0",
     "gh-pages": "^6.1.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "react-snap": "^1.23.0"
   }
 }
